2007-07-23  Daniel Kobras  <kobras@debian.org>

	* magick/delegate.c (UnixShellTextEscape): Fix fencepost error
	  when checking whether escaping is safe.

2007-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am: Retire VMS and MacOS 9 support from package.

2007-07-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/{cmyk.c, gray.c, mono.c, rgb.c, uyvy.c, wbmp.c, yuv.c}
	(ReadFOOImage): Check for EOF while searching for start of image
	data.
	* tests/Makefile.am: Don't test PTIF format with blob I/O since it
	is not possible to pass the rwblob test and it is really an output
	driver rather than a format.
	* libtool: Update to latest CVS libtool.
	* magick/constitute.c (ExportModulo8Quantum): Move Import and
	Export macros from header file since they are not used anywhere
	else.
	* coders/dpx.c: Add underscore suffix to macro local variable
	names in order to avoid conflict with names in code using the
	macros.

2007-07-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.c: Reduce the number of warnings when compiling
	the Wand library.
	* coders/xwd.c (XWD_OVERFLOW): Eliminate comparison between signed
	and unsigned.
	* coders/pnm.c (ValidateScalingIndex): Eliminate check to see if
	unsigned type is less than zero.
	* magick/log.c (LogMagickEvent): Even though log file name comes
	from a controlled source (log.mgk), perform safe numeric
	substitution on it.
	* coders/xwd.c (ReadXWDImage): Eliminate conflict between locally
	defined OVERFLOW macro and similarly named macro under Windows.

2007-07-18  Daniel Kobras  <kobras@debian.org>

	* coders/xwd.c (ReadXWDImage): Integer overflow fix
	(CVE-2007-1797).  From Debian patch
	xwd_integer_overflow_fixes_CVE-2007-1797.
	(ReadXWDImage): Fix for integer under/overflow.  From Debian patch
	xwd_overflow_fix.
	* coders/wpg.c (ReadWPGImage): WPG segfault fix.  From Debian
	patch wpg_segfault_fix.
	* coders/viff.c (ReadVIFFImage): Verify number of bands prior to