@@ -1,3 +1,8 @@
+2007-07-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/delegate.c (UnixShellTextEscape): Don't escape newline
+	character since it performs the opposite of what is desired.
+
 2007-07-23  Daniel Kobras  <kobras@debian.org>
 
 	* magick/delegate.c (UnixShellTextEscape): Fix fencepost error
